objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Cargo Door to Door</fullName>
        <description>Cargo Door to Door Business process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Corporate</fullName>
        <description>Lead Process for Corporate Leads</description>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Travel Agency</fullName>
        <description>Lead Process for Travel Agency Leads</description>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Agreed_Annual_Target_PA__c</fullName>
        <label>Agreed Annual Target PA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved by Central Coordinator</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approx_Annual_Travel_Spend_Last_Year__c</fullName>
        <inlineHelpText>Per Annunn</inlineHelpText>
        <label>Approx Annual Travel Spend Last Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Registration_No__c</fullName>
        <label>Business Registration No.</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CITY__c</fullName>
        <label>CITY</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>INTL</fullName>
                </value>
                <value>
                    <fullName>OTA B2B</fullName>
                </value>
                <value>
                    <fullName>OTA B2C</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>TMC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commissionable__c</fullName>
        <label>Commissionable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Corporate_Code__c</fullName>
        <label>Corporate Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Discount__c</fullName>
        <label>Corporate Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Created_in_Navitaire__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created in Navitaire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_AS__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name_AS__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATA_TAAI_TAFI_IATO_No__c</fullName>
        <label>IATA/TAAI/TAFI/IATO No</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name_AS__c</fullName>
        <label>Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Name__c</fullName>
        <formula>Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName</formula>
        <label>Lead Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Status__c</fullName>
        <label>Legal Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Limited Co.</fullName>
                </value>
                <value>
                    <fullName>Partnership Firm</fullName>
                </value>
                <value>
                    <fullName>Sole Proprietorship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>INT</fullName>
                </value>
                <value>
                    <fullName>DOM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Log__c</fullName>
        <label>Login ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <description>For Cargo</description>
        <label>Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competition</fullName>
                </value>
                <value>
                    <fullName>Lack of Interest</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Product not Available</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_AS__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mode_of_Payment__c</fullName>
        <label>Mode of Payment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Cheque</fullName>
                </value>
                <value>
                    <fullName>Demand Draft</fullName>
                </value>
                <value>
                    <fullName>Electronic Fund Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Movement_Type__c</fullName>
        <label>Movement Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incentive Movement</fullName>
                </value>
                <value>
                    <fullName>Regular Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Navitaire_Id__c</fullName>
        <externalId>true</externalId>
        <label>Navitaire Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>No_of_Months_Deal_Valid__c</fullName>
        <label>No of Months Deal Valid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Okhla (Delhi)</fullName>
                </value>
                <value>
                    <fullName>Mahipalpur (Delhi)</fullName>
                </value>
                <value>
                    <fullName>Noida</fullName>
                </value>
                <value>
                    <fullName>Gurgaon</fullName>
                </value>
                <value>
                    <fullName>Lucknow</fullName>
                </value>
                <value>
                    <fullName>Chandigarh</fullName>
                </value>
                <value>
                    <fullName>Kolkata</fullName>
                </value>
                <value>
                    <fullName>Indore</fullName>
                </value>
                <value>
                    <fullName>Mumbai</fullName>
                </value>
                <value>
                    <fullName>Goa</fullName>
                </value>
                <value>
                    <fullName>Nagpur</fullName>
                </value>
                <value>
                    <fullName>Ahmedabad</fullName>
                </value>
                <value>
                    <fullName>Chennai</fullName>
                </value>
                <value>
                    <fullName>Bangalore</fullName>
                </value>
                <value>
                    <fullName>Hyderabad</fullName>
                </value>
                <value>
                    <fullName>Pune</fullName>
                </value>
                <value>
                    <fullName>Ludhiana</fullName>
                </value>
                <value>
                    <fullName>Baddi</fullName>
                </value>
                <value>
                    <fullName>Parwanoo</fullName>
                </value>
                <value>
                    <fullName>Jalandhar</fullName>
                </value>
                <value>
                    <fullName>Varanasi</fullName>
                </value>
                <value>
                    <fullName>Dehradun</fullName>
                </value>
                <value>
                    <fullName>Patna</fullName>
                </value>
                <value>
                    <fullName>Ranchi</fullName>
                </value>
                <value>
                    <fullName>Vijaywada</fullName>
                </value>
                <value>
                    <fullName>Jaipur</fullName>
                </value>
                <value>
                    <fullName>Cochin</fullName>
                </value>
                <value>
                    <fullName>Haridwar</fullName>
                </value>
                <value>
                    <fullName>Aurangabad</fullName>
                </value>
                <value>
                    <fullName>Coimbatore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Office_Locations__c</fullName>
        <label>Other Office locations</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAN_No__c</fullName>
        <label>PAN No.</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Remarks__c</fullName>
        <label>Payment Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phone_AS__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Product_Role__c</fullName>
        <label>Product/Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>API</fullName>
                </value>
                <value>
                    <fullName>API Corporate</fullName>
                </value>
                <value>
                    <fullName>CORT</fullName>
                </value>
                <value>
                    <fullName>HOL</fullName>
                </value>
                <value>
                    <fullName>IBM</fullName>
                </value>
                <value>
                    <fullName>LTC</fullName>
                </value>
                <value>
                    <fullName>STBF</fullName>
                </value>
                <value>
                    <fullName>TATA</fullName>
                </value>
                <value>
                    <fullName>TCPN</fullName>
                </value>
                <value>
                    <fullName>Web Travel Agent</fullName>
                </value>
                <value>
                    <fullName>APIC</fullName>
                </value>
                <value>
                    <fullName>GRP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Disqualification__c</fullName>
        <label>Reason for Disqualification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <label>Record Type Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Channel__c</fullName>
        <label>Sales Channel</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sectors_Frequently_Travelled__c</fullName>
        <label>Sectors Frequently Travelled</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agartala (IXA)</fullName>
                </value>
                <value>
                    <fullName>Ahmedabad (AMD)</fullName>
                </value>
                <value>
                    <fullName>Amritsar (ATQ)</fullName>
                </value>
                <value>
                    <fullName>Bagdogra (IXB)</fullName>
                </value>
                <value>
                    <fullName>Bangkok (BKK)</fullName>
                </value>
                <value>
                    <fullName>Belagavi (IXG)</fullName>
                </value>
                <value>
                    <fullName>Bengaluru (BLR)</fullName>
                </value>
                <value>
                    <fullName>Chandigarh (IXC)</fullName>
                </value>
                <value>
                    <fullName>Chennai (MAA)</fullName>
                </value>
                <value>
                    <fullName>Coimbatore (CJB)</fullName>
                </value>
                <value>
                    <fullName>Colombo (CMB)</fullName>
                </value>
                <value>
                    <fullName>Dehradun (DED)</fullName>
                </value>
                <value>
                    <fullName>Delhi (DEL)</fullName>
                </value>
                <value>
                    <fullName>Dharamshala (DHM)</fullName>
                </value>
                <value>
                    <fullName>Dubai (DXB)</fullName>
                </value>
                <value>
                    <fullName>Goa (GOI)</fullName>
                </value>
                <value>
                    <fullName>Guwahati (GAU)</fullName>
                </value>
                <value>
                    <fullName>Hyderabad (HYD)</fullName>
                </value>
                <value>
                    <fullName>Jabalpur (JLR)</fullName>
                </value>
                <value>
                    <fullName>Jaipur (JAI)</fullName>
                </value>
                <value>
                    <fullName>Jammu (IXJ)</fullName>
                </value>
                <value>
                    <fullName>Jodhpur (JDH)</fullName>
                </value>
                <value>
                    <fullName>Kabul (KBL)</fullName>
                </value>
                <value>
                    <fullName>Kochi (COK)</fullName>
                </value>
                <value>
                    <fullName>Kolkata (CCU)</fullName>
                </value>
                <value>
                    <fullName>Kozhikode (CCJ)</fullName>
                </value>
                <value>
                    <fullName>Madurai (IXM)</fullName>
                </value>
                <value>
                    <fullName>Male (MLE)</fullName>
                </value>
                <value>
                    <fullName>Mangalore (IXE)</fullName>
                </value>
                <value>
                    <fullName>Mumbai (BOM)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AN</fullName>
                </value>
                <value>
                    <fullName>ANI</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>ASM</fullName>
                </value>
                <value>
                    <fullName>BHR</fullName>
                </value>
                <value>
                    <fullName>CHT</fullName>
                </value>
                <value>
                    <fullName>DEL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GJ</fullName>
                </value>
                <value>
                    <fullName>GOA</fullName>
                </value>
                <value>
                    <fullName>GUJ</fullName>
                </value>
                <value>
                    <fullName>HAR</fullName>
                </value>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>HYD</fullName>
                </value>
                <value>
                    <fullName>J&amp;K</fullName>
                </value>
                <value>
                    <fullName>JH</fullName>
                </value>
                <value>
                    <fullName>JHR</fullName>
                </value>
                <value>
                    <fullName>KAR</fullName>
                </value>
                <value>
                    <fullName>KER</fullName>
                </value>
                <value>
                    <fullName>MAH</fullName>
                </value>
                <value>
                    <fullName>MEG</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
                <value>
                    <fullName>MP</fullName>
                </value>
                <value>
                    <fullName>ORI</fullName>
                </value>
                <value>
                    <fullName>PUB</fullName>
                </value>
                <value>
                    <fullName>RAJ</fullName>
                </value>
                <value>
                    <fullName>TN</fullName>
                </value>
                <value>
                    <fullName>TRP</fullName>
                </value>
                <value>
                    <fullName>UP</fullName>
                </value>
                <value>
                    <fullName>UTRL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Station_Nearest_Airport__c</fullName>
        <label>Station (Nearest Airport)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agartala (IXA)</fullName>
                </value>
                <value>
                    <fullName>Ahmedabad (AMD)</fullName>
                </value>
                <value>
                    <fullName>Aizawl (AJL)</fullName>
                </value>
                <value>
                    <fullName>Amritsar (ATQ)</fullName>
                </value>
                <value>
                    <fullName>Bagdogra (IXB)</fullName>
                </value>
                <value>
                    <fullName>Bangkok (BKK)</fullName>
                </value>
                <value>
                    <fullName>Belagavi (IXG)</fullName>
                </value>
                <value>
                    <fullName>Bengaluru (BLR)</fullName>
                </value>
                <value>
                    <fullName>Chandigarh (IXC)</fullName>
                </value>
                <value>
                    <fullName>Chennai (MAA)</fullName>
                </value>
                <value>
                    <fullName>Coimbatore (CJB)</fullName>
                </value>
                <value>
                    <fullName>Colombo (CMB)</fullName>
                </value>
                <value>
                    <fullName>Dehradun (DED)</fullName>
                </value>
                <value>
                    <fullName>Delhi (DEL)</fullName>
                </value>
                <value>
                    <fullName>Dharamshala (DHM)</fullName>
                </value>
                <value>
                    <fullName>Dubai (DXB)</fullName>
                </value>
                <value>
                    <fullName>Goa (GOI)</fullName>
                </value>
                <value>
                    <fullName>Gorakhpur (GOP)</fullName>
                </value>
                <value>
                    <fullName>Guwahati (GAU)</fullName>
                </value>
                <value>
                    <fullName>Hyderabad (HYD)</fullName>
                </value>
                <value>
                    <fullName>Jabalpur (JLR)</fullName>
                </value>
                <value>
                    <fullName>Jaipur (JAI)</fullName>
                </value>
                <value>
                    <fullName>Jammu (IXJ)</fullName>
                </value>
                <value>
                    <fullName>Jodhpur (JDH)</fullName>
                </value>
                <value>
                    <fullName>Kabul (KBL)</fullName>
                </value>
                <value>
                    <fullName>Kochi (COK)</fullName>
                </value>
                <value>
                    <fullName>Kolkata (CCU)</fullName>
                </value>
                <value>
                    <fullName>Kozhikode (CCJ)</fullName>
                </value>
                <value>
                    <fullName>Madurai (IXM)</fullName>
                </value>
                <value>
                    <fullName>Male (MLE)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Station__c</fullName>
        <label>Station</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subsidiaries_if_any__c</fullName>
        <label>Subsidiaries (if any)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRAVEL_AGENCY__c</fullName>
        <label>TRAVEL AGENCY</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Target_Per_Month__c</fullName>
        <label>Target Per Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Title_AS__c</fullName>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WEB_Discount__c</fullName>
        <label>WEB Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Web_Code__c</fullName>
        <label>Web Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>Cargo_Unassigned_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Cargo Unassigned</label>
        <queue>Cargo_Unassigned</queue>
        <sharedTo>
            <role>DGM_Door_to_Door</role>
            <role>GM_Door_to_Door</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Central_Sales_Coordinators_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Central Sales Coordinators</label>
        <queue>Central_Sales_Coordinators</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>Pending_Agency_creation_in_Navitaire</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Approval_Status__c</columns>
        <columns>Navitaire_Id__c</columns>
        <columns>Created_in_Navitaire__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>Created_in_Navitaire__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Travel_Agency</value>
        </filters>
        <label>Pending Agency creation in Navitaire</label>
    </listViews>
    <listViews>
        <fullName>Pending_Corporate_creation_in_Navitaire</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Approval_Status__c</columns>
        <columns>Navitaire_Id__c</columns>
        <columns>Created_in_Navitaire__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>Created_in_Navitaire__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Corporate</value>
        </filters>
        <label>Pending Corporate creation in Navitaire</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <recordTypes>
        <fullName>Cargo_Door_to_Door</fullName>
        <active>true</active>
        <businessProcess>Cargo Door to Door</businessProcess>
        <description>Record Type for Cargo Door to Door</description>
        <label>Cargo Door to Door</label>
    </recordTypes>
    <recordTypes>
        <fullName>Corporate</fullName>
        <active>true</active>
        <businessProcess>Corporate</businessProcess>
        <description>For Corporate leads</description>
        <label>Corporate</label>
    </recordTypes>
    <recordTypes>
        <fullName>Travel_Agency</fullName>
        <active>true</active>
        <businessProcess>Travel Agency</businessProcess>
        <description>For Travel Agencies</description>
        <label>Travel Agency</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>PAN_is_mandatory_for_Domestic_Agencies</fullName>
        <active>true</active>
        <description>PAN No. is mandatory for Domestic Agencies</description>
        <errorConditionFormula>AND(ISPICKVAL(Location__c, &apos;DOM&apos;),  ISBLANK(PAN_No__c), RecordType.DeveloperName == &apos;Travel_Agency&apos;)</errorConditionFormula>
        <errorDisplayField>PAN_No__c</errorDisplayField>
        <errorMessage>Please enter the PAN No.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Payment_Amount_is_mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(TEXT(Mode_of_Payment__c))), ISBLANK(Payment_Amount__c),  RecordType.DeveloperName == &apos;Travel_Agency&apos;)</errorConditionFormula>
        <errorDisplayField>Payment_Amount__c</errorDisplayField>
        <errorMessage>Please enter the Payment Amount.</errorMessage>
    </validationRules>
</CustomObject>